restructuring the project

--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
     ],
     "require": {
         "monolog/monolog": "^1.22"
-    }
+    },
+    "autoload": {
+        "psr-4": {"NikeAndPhp\\": "src/NikeAndPhp"}
+}
 }
