adding a new structure to the test classes

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
     "require": {
         "monolog/monolog": "^1.22"
     },
+    "require-dev": {
+      "phpunit/phpunit": "6.0.*"
+    },
     "autoload": {
         "psr-4": {"NikeAndPhp\\": "src/NikeAndPhp"}
 }
